--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -52,36 +52,40 @@
                                 {% with product.has_sizes as s %}
                                 {% if s %}
                                     {% if product.category.name == '10bowls' %}
-                                        <div class="col-12 "> 
-                                            <p><strong>Size:</strong></p>
-                                            <select name="product_size" id="id_product_size" class="form-control rounded w-50">
-                                                <option value="00">00</option>
-                                                <option value="0">0</option>
-                                                <option value="1">1</option>
-                                                <option value="2">2</option>
-                                                <option value="3">3</option>
-                                                <option value="4">4</option>
-                                                <option value="5">5</option>
-                                            </select>
+                                        <div class="col-12 text-rose text-center"> 
+                                            <p class="text-uppercase font-weight-bold mt-2"><strong><u>Size:</u></strong></p>
+                                            <div class="ml-5 pl-5">
+                                                <select name="product_size" id="id_product_size" class="form-control rounded w-50 ml-5 pl-5 bg-rose text-black">
+                                                    <option value="00">00</option>
+                                                    <option value="0">0</option>
+                                                    <option value="1">1</option>
+                                                    <option value="2">2</option>
+                                                    <option value="3">3</option>
+                                                    <option value="4">4</option>
+                                                    <option value="5">5</option>
+                                                </select>
+                                            </div>
                                         </div>
                                     {% elif product.category.name == "30footwear" %}
-                                    <div class="col-12">
-                                        <p><strong>Size:</strong></p>
-                                        <select name="product_size" id="id_product_size" class="form-control rounded w-50">
-                                                <option value="1">1</option>
-                                                <option value="2">2</option>
-                                                <option value="3">3</option>
-                                                <option value="4">4</option>
-                                                <option value="5">5</option>
-                                                <option value="6">6</option>
-                                                <option value="7">7</option>
-                                                <option value="8">8</option>
-                                                <option value="9">9</option>
-                                                <option value="10">10</option>
-                                                <option value="11">11</option>
-                                                <option value="12">12</option>
-                                                <option value="13">13</option>
-                                        </select>
+                                    <div class="col-12 text-rose text-center">
+                                        <p class="text-uppercase font-weight-bold mt-2"><strong><u>Size:</u></strong></p>
+                                        <div class="ml-5 pl-5">
+                                            <select name="product_size" id="id_product_size" class="form-control rounded w-50 ml-5 pl-5 bg-rose text-black">
+                                                    <option value="1">1</option>
+                                                    <option value="2">2</option>
+                                                    <option value="3">3</option>
+                                                    <option value="4">4</option>
+                                                    <option value="5">5</option>
+                                                    <option value="6">6</option>
+                                                    <option value="7">7</option>
+                                                    <option value="8">8</option>
+                                                    <option value="9">9</option>
+                                                    <option value="10">10</option>
+                                                    <option value="11">11</option>
+                                                    <option value="12">12</option>
+                                                    <option value="13">13</option>
+                                            </select>
+                                        </div>
                                     </div>
                                     {% else %}
                                     <div class="col-12 text-rose text-center">
@@ -101,7 +105,7 @@
                                     {% endif %}
                                 {% endif %}
                                 <div class="col-12">
-                                    <p class="mt-2 text-rose text-uppercase font-weight-bold"><strong><u>Quantity</u></strong></p>
+                                    <p class="mt-1 text-rose text-uppercase font-weight-bold"><strong><u>Quantity</u></strong></p>
                                     <div class="form-group w-50 ml-5">
                                         <div class="input-group ml-5 pl-4">
                                             <input type="number" class="form-control qty_input text-center bg-rose text-black font-weight-bold" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty{{ product_id }}">
