--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -108,7 +108,25 @@
                                     <p class="mt-1 text-rose text-uppercase font-weight-bold"><strong><u>Quantity</u></strong></p>
                                     <div class="form-group w-50 ml-5">
                                         <div class="input-group ml-5 pl-4">
-                                            <input type="number" class="form-control qty_input text-center bg-rose text-black font-weight-bold" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty{{ product_id }}">
+                                            <div class="input-group-prepend">
+                                                <button class="decrement-qty btn btn-black rounded-0"
+                                                    data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                    <span class="icon">
+                                                        <i class="fas fa-minus-circle"></i>
+                                                    </span>
+                                                </button>
+                                            </div>
+                                            <input class="form-control qty_input text-center bg-rose text-black font-weight-bold" 
+                                                type="number" name="quantity" value="1" min="1" max="99" 
+                                                data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                            <div class="input-group-append">
+                                                <button class="increment-qty btn btn-black rounded-0"
+                                                    data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                                    <span class="icon">
+                                                        <i class="fas fa-plus-circle"></i>
+                                                    </span>
+                                                </button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -132,4 +150,9 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
 {% endblock %}
