Updated quantity field in shopping bag

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -165,7 +165,9 @@ a.category-badge > span.badge:hover  {
     right: 20px;
 }
 
-.btt-link {
+.btt-link, 
+.remove-item, 
+.update-link {
     cursor: pointer;
 }
 
