--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -35,12 +35,12 @@
             <div class="row">
                 <div class="col">
                     <strong><p class="mt-3 mb-1 text-darkred">
-                        Total{% if free_delivery_delta > 0 %} (Exc. delivery){% endif %}:
+                        Total{% if free_shipping_delta > 0 %} (Exc. delivery){% endif %}:
                         <span class="float-right">£{{ total|floatformat:2 }}</span>
                     </p></strong>
-                    {% if free_delivery_delta > 0 %}
-                        <p class="mb-0 p-2 bg-warning shadow text-rose text-center">
-                            You can get free delivery by spending <strong>£{{ free_delivery_delta }}</strong> !
+                    {% if free_shipping_delta > 0 %}
+                        <p class="mb-0 p-2 bg-black shadow text-rose text-center">
+                            You can get free delivery by spending <strong>£{{ free_shipping_delta }}</strong> !
                         </p>
                     {% endif %}
                     <a href="{% url 'view_bag' %}" class="btn btn-red btn-block rounded-0">
