Added checkout views and templates

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -108,7 +108,7 @@
                                             </span>
                                             <span class="text-uppercase"> Keep Shopping ? !</span>
                                         </a>
-                                        <a href="{% url 'products' %}" class="btn btn-outline btn-darkred font-weight-bold rounded-0 btn lg">
+                                        <a href="{% url 'checkout' %}" class="btn btn-outline btn-darkred font-weight-bold rounded-0 btn lg">
                                             <span class="icon">
                                                 <i class="fas fa-cash-register"></i>
                                             </span>
