--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="row bg-rose">
-        <div class="col text-rose text-uppercase mt-4">
+        <div class="col text-rose text-uppercase mt-4 ml-5 mr-1">
             <p class="text-muted text-darkred font-weight-bold"><u>Summary ({{ product_count }})</u></p>
                 <div class="row">
                     <div class="col-7 offset-2">
@@ -36,7 +36,7 @@
                 </div>
                 {% for item in bag_items %}
                     <div class="row">
-                        <div class="col-2 mb-1">
+                        <div class="col-2 mb-1 mt-2">
                             <a href="{% url 'product_detail' item.product.id %}">
                                 {% if item.product.image %}
                                     <img class="w-100 img-thumbnail" src="{{ item.product.image.url }}" alt="{{ product.name }}">
@@ -46,7 +46,7 @@
                             </a>
                         </div>
                         <div class="col-7 text-darkred">
-                            <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                            <p class="my-0 mt-2"><strong>{{ item.product.name }}</strong></p>
                             {% if item.product.has_sizes %}
                                 <p class="my-0 small text-black">Size: {{ item.size|upper }}</p>
                             {% endif %}
@@ -72,7 +72,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12 col-lg-8 text-uppercase text-darkred mt-4 ml-3">
+        <div class="col-12 col-lg-8 offset-2 text-uppercase text-center text-darkred mt-4 ml-5">
             <p class="text-muted text-red font-weight-bold">Please fill out the form below to complete your order</p>
             <hr class="w-50">
             <form action="{% url 'checkout' %}" method="POST" id="payment-form">
@@ -107,12 +107,12 @@
                 </fieldset>
                 <hr class="w-50">
                 <fieldset class="px-3">
-                    <legend class="fieldset-label small text-darkred text-center font-weight-bold px-2 w-auto"><u>Pay</u></legend>
+                    <legend class="fieldset-label small text-center font-weight-bold px-2 w-auto"><u>Pay</u><i class="fas fa-card"></i></legend>
                     <!-- Stripe Element -->
-                    <div class="mb-3" id="card-element"></div>
+                    <div class="mb-3 bg-white text-darkred rounded" id="card-element"></div>
 
                     <!-- Displays form errors -->
-                    <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+                    <div class="mb-3 text-danger rounded" id="card-errors" role="alert"></div>
                 </fieldset>
 
                 <div class="submit-button text-right mt-5 mb-2">
@@ -139,4 +139,11 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+    {{ client_secret|json_script:"id_client_secret" }}
+    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
 {% endblock %}
