--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -1,7 +1,26 @@
 #payment-form .form-control,
 #card-element {
-    color: #000;
-    border: 2px solid #000;
+    color: #3b0d11;
+    border: 1px solid #000;
+  }
+
+  #loading-overlay {
+    display: none;
+    position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(71, 3, 3, 0.863);
+      z-index: 9999;
+  }
+  
+  .loading-spinner {
+    display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 0;
+      height: 100%;
 }
 
 .stripe-style-input::placeholder {
@@ -9,7 +28,7 @@
 
 }
 
-/* Following CSS taken from Stripe Documentation */ 
+/* Following CSS base taken from Stripe Documentation */ 
   body {
     font-family: 'Pontano Sans', sans-serif;
     font-size: 16px;
@@ -37,14 +56,14 @@
   }
 
   #payment-element {
-    margin-bottom: 5px;
+    margin: 2px 3px 4px 3px;
   }
 
   /* Buttons and links */
   button,
   .stripe-style-input {
     background: #fff;
-    font-family: Arial, sans-serif;
+    font-family: 'Pontano Sans', sans-serif;
     color: #3b0d11;
     border-radius: 4px;
     border: 0;
@@ -66,80 +85,3 @@
     opacity: 0.5;
     cursor: default;
   }
-
-  /* spinner/processing state, errors */
-  .spinner,
-  .spinner:before,
-  .spinner:after {
-    border-radius: 50%;
-  }
-  .spinner {
-    color: #ffffff;
-    font-size: 22px;
-    text-indent: -99999px;
-    margin: 0px auto;
-    position: relative;
-    width: 20px;
-    height: 20px;
-    box-shadow: inset 0 0 0 2px;
-    -webkit-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    transform: translateZ(0);
-  }
-  .spinner:before,
-  .spinner:after {
-    position: absolute;
-    content: "";
-  }
-  .spinner:before {
-    width: 10.4px;
-    height: 20.4px;
-    background: #5469d4;
-    border-radius: 20.4px 0 0 20.4px;
-    top: -0.2px;
-    left: -0.2px;
-    -webkit-transform-origin: 10.4px 10.2px;
-    transform-origin: 10.4px 10.2px;
-    -webkit-animation: loading 2s infinite ease 1.5s;
-    animation: loading 2s infinite ease 1.5s;
-  }
-  .spinner:after {
-    width: 10.4px;
-    height: 10.2px;
-    background: #5469d4;
-    border-radius: 0 10.2px 10.2px 0;
-    top: -0.1px;
-    left: 10.2px;
-    -webkit-transform-origin: 0px 10.2px;
-    transform-origin: 0px 10.2px;
-    -webkit-animation: loading 2s infinite ease;
-    animation: loading 2s infinite ease;
-  }
-
-  @-webkit-keyframes loading {
-    0% {
-      -webkit-transform: rotate(0deg);
-      transform: rotate(0deg);
-    }
-    100% {
-      -webkit-transform: rotate(360deg);
-      transform: rotate(360deg);
-    }
-  }
-  @keyframes loading {
-        0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-        }
-        100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-        }
-    }
-
-    @media only screen and (max-width: 600px) {
-        form {
-          width: 80vw;
-          min-width: initial;
-        }
-    }
