--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -14,14 +14,17 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
+    <div class="bg-black mt-5">
     <div class="container">
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="logo-font mb-4">Thank You</h2>
+                <h2 class="logo-font text-rose text-center font-weight-bold mb-4">Thank You - {{ order.full_name }}</h2>
                 <hr>
-                <p class="text-black">Your order information is below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
+                <h3 class="text-rose text-center">Your order details are below:</h3>
+                <p class="text-rose text-center">
+                    An email will be sent to <strong>{{ order.email }}</strong> as confirmation or your order.
+                </p>
             </div>
         </div>
 
@@ -29,14 +32,15 @@
             <div class="col-12 col-lg-7"></div>
         </div>
         <div class="row">
-			<div class="col-12 col-lg-7 text-right">
-				<a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="btn btn-black rounded-0 my-2">
-					<span class="icon mr-2">
-						<i class="fas fa-gifts"></i>
+			<div class="col-12 col-lg-6 text-right">
+				<a href="{% url 'products' %}" class="btn btn-red rounded-0 my-2">
+					<span class="icon">
+						<i class="fas fa-shopping-cart"></i>
 					</span>
-					<span class="text-uppercase">Now check out the latest deals!</span>
+					<span class="text-uppercase font-weight-bold">Continue To Browse</span>
 				</a>
 			</div>
 		</div>
     </div>
+</div>
 {% endblock %}
