--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -18,9 +18,9 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <hr>
+                <hr class="bg-rose">
                 <h2 class="logo-font text-rose text-center font-weight-bold mb-4">Thank You - {{ order.full_name }}</h2>
-                <hr>
+                <hr class="bg-rose">
                 <h3 class="text-rose text-center">Your order details are below:</h3>
                 <p class="text-rose text-center">
                     An email will be sent to <strong>{{ order.email }}</strong> as confirmation or your order.
@@ -28,11 +28,175 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-12 col-lg-7"></div>
+        <div class="row text-red ml-5 pl-5">
+            <div class="col-12 col-lg-8 ml-5 pl-5">
+                <div class="order-confirmation-wrapper p-2 border bg-rose font-weight-bold mt-2 ml-5 pl-2">
+                    <div class="row">
+                        <div class="col">
+                            <small class="text-muted font-weight-bold text-darkred"><u>Order Info:</u></small>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold">Order Number</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0">{{ order.order_number }}</p>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold">Order Date</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0">{{ order.date }}</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col">
+                            <small class="text-muted font-weight-bold text-darkred"><u>Order Details:</u></small>
+                        </div>
+                    </div>
+
+                    {% for item in order.lineitems.all %}
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold">
+                                {{ item.product.name }}{% if item.product_size %} - Size {{ item.product.size|upper }}{% endif %}
+                            </p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="small font-weight-bold mb-0">{{ item.quantity }} @ £{{ item.product.price }} each</p>
+                        </div>
+                        <hr class="w-25 bg-red">
+                    </div>
+                    {% endfor %}
+                    <hr>
+                    <div class="row">
+                        <div class="col">
+                            <small class="text-muted font-weight-bold text-darkred"><u>Delivering To:</u></small>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold">Full Name</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0">{{ order.full_name }}</p>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold">Address 1</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0">{{ order.street_address1 }}</p>
+                        </div>
+                    </div>
+
+                    {% if order.street_address2 %}
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold">Address 2</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0">{{ order.street_address1 }}</p>
+                        </div>
+                    </div>
+                    {% endif %}
+
+                    {% if order.county %}
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold">County</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0">{{ order.county }}</p>
+                        </div>
+                    </div>
+                    {% endif %}
+
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold">Town or City</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0">{{ order.town_or_city }}</p>
+                        </div>
+                    </div>
+
+                    {% if order.postcode %}
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold">Postal Code</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0">{{ order.postcode }}</p>
+                        </div>
+                    </div>
+                    {% endif %}
+
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold">Country</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0">{{ order.country }}</p>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold">Phone Number</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0">{{ order.phone_number }}</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col">
+                            <small class="text-muted font-weight-bold text-darkred"><u>Billing Info:</u></small>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 font-weight-bold">Order Total</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0">£{{ order.order_total }}</p>
+                        </div>
+                    </div>
+
+                    <div class="row text-red">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 font-weight-bold">Delivery</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right">
+                            <p class="mb-0">£{{ order.delivery_cost }}</p>
+                        </div>
+                    </div>
+
+                    <div class="row text-red font-weight-bold">
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black ">Grand Total</p>
+                        </div>
+                        <div class="col-12 col-md-8 text-md-right text-black">
+                            <p class="mb-0">£{{ order.grand_total }}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
         <div class="row">
-			<div class="col-12 col-lg-6 text-right">
+			<div class="col-12 col-lg-8 text-right">
 				<a href="{% url 'products' %}" class="btn btn-red rounded-0 my-2">
 					<span class="icon">
 						<i class="fas fa-shopping-cart"></i>
