--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -63,15 +63,24 @@
 
                     {% for item in order.lineitems.all %}
                     <div class="row">
-                        <div class="col-12 col-md-4">
-                            <p class="mb-0 text-black font-weight-bold">
-                                {{ item.product.name }}{% if item.product_size %} - Size {{ item.product.size|upper }}{% endif %}
+                        <div class="col-2 mb-1 ml-1">
+                            <a href="{% url 'product_detail' item.product.id %}">
+                                {% if item.product.image %}
+                                    <img class="w-100 img-thumbnail" src="{{ item.product.image.url }}" alt="{{ product.name }}">
+                                {% else %}
+                                    <img class="w-100 img-thumbnail" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                                {% endif %}
+                            </a>
+                        </div>
+                        <div class="col-10 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold ml-5 mt-2">
+                                {{ item.product.name }}{% if item.product_size %} - Size: {{ item.product_size|upper }}{% endif %}
                             </p>
                         </div>
-                        <div class="col-12 col-md-8 text-md-right">
-                            <p class="small font-weight-bold mb-0">{{ item.quantity }} @ £{{ item.product.price }} each</p>
+                        <div class="col-12 col-md-6 text-md-center mt-3">
+                            <p class="small font-weight-bold mb-0">{{ item.quantity }} x £{{ item.product.price }} each</p>
                         </div>
-                        <hr class="w-25 bg-red">
+                        <hr class="w-75 bg-red ml-5">
                     </div>
                     {% endfor %}
                     <hr>
