--- a/static/css/base.css
+++ b/static/css/base.css
@@ -199,6 +199,58 @@ a.category-badge > span.badge:hover  {
     }
 }
 
+/* Allauth form */
+.allauth-form-inner-content p {
+    margin-top: 1.5rem;
+    color:#f5dad5;
+}
+
+.allauth-form-inner-content input {
+    border-color:#3b0d11;
+}
+
+.allauth-form-inner-content label:not([for='id_remember']) {
+    display: none;
+}
+
+.allauth-form-inner-content input::placeholder {
+    color:#3b0d11;
+}
+
+.allauth-form-inner-content button,
+.allauth-form-inner-content input[type='submit'] {
+	/* btn */
+	display: inline-block;
+    font-weight: 400;
+    color: #f5dad5;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: #d7263d;
+    border: 1px solid #3b0d11;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0;
+
+    /* standard bootstrap btn transitions */
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.allauth-form-inner-content button:hover,
+.allauth-form-inner-content input[type='submit']:hover {	
+	color: #fff;
+    background-color: #d7263d;
+    border-color: #f5dad5;
+}
+
+.allauth-form-inner-content a {
+	color: #f5dad5;
+}
+
 @media (min-width: 992px) {
     .fixed-top-desk-only {
         position: fixed;
