--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,1 +1,16 @@
 {% extends "base.html" %}
+
+{% block content %}
+    <div class="container header-container">
+        <div>
+            <div class="row">
+                <div class="col-12 col-md-6 bg-darkred">
+                    <div class="allauth-form-inner-content text-rose">
+                        {% block inner_content %}
+                        {% endblock %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
