--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -4,10 +4,12 @@
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Sign Up" %}</h1>
+{% block inner_content %}
+<hr>
+<h2 class="logo-font mb-4 text-rose">{% trans "Sign Up" %}</h2>
+<hr>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+<p class="font-weight-bold">{% blocktrans %}Already have an account? . . . Then please <a href="{{ login_url }}" class="text-red text-uppercase"><u>sign in.</a></u>{% endblocktrans %}</p>
 
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
@@ -15,7 +17,6 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+  <button class="btn btn-rose font-weight-bold mb-3" type="submit">{% trans "Sign Up" %} <i class="fas fa-user-plus ml-1"></i></button>
 </form>
-
 {% endblock %}
