--- a/templates/base.html
+++ b/templates/base.html
@@ -85,11 +85,11 @@
               </div>
             </a>
             <div class="dropdown-menu border-0 bg-rose" aria-labelledby="user-options">
-              {%if request.user.is_authticated %}
+              {%if request.user.is_authenticated %}
               {% if request.user.is_superuser %}
               <a href="#" class="dropdown-item text-red font-weight-bold">Manage Products</a>
               {% endif %}
-              <a href="" class="dropdown-item text-red font-weight-bold">My Profile</a>
+              <a href="{% url 'profile' %}" class="dropdown-item text-red font-weight-bold">My Profile</a>
               <a href="{% url 'account_logout' %}" class="dropdown-item text-red font-weight-bold">Sign Out</a>
               {% else %}
               <a href="{% url 'account_signup' %}" class="dropdown-item text-red font-weight-bold">Create Account</a>
