--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -21,5 +21,23 @@
             <h2> Profile</h2>
         </div>
     </div>
-    {{ profile }}
+    <div class="row">
+        <div class="col-12 col-lg-6">
+            <p class="text-muted mt-2">Default Delivery Information</p>
+            <form action="{% url 'profile' %}" class="mt-3" method="POST" id="profile-update-form">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <button class="btn btn-black rounded-0 text-uppercase font-weight-bold mb-3">Update Information <i class="fas fa-user-edit ml-1"></i></button>
+            </form>
+        </div>
+        <div class="col-12 col-lg-6">
+            <p class="text-muted mt-2">Order History</p>
+            {{ orders }}
+        </div>
+    </div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript" src ="{% static 'profiles/js/countryfield.js' %}"></script>
 {% endblock %}
