--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -149,6 +149,9 @@
             </div>
         </div>
     </div>
+    <div class="mt-3">
+        {% include 'includes/product_review.html' %}
+    </div>
 </div>
 {% endblock %}
 
