--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -18,7 +18,7 @@
     <div class="row bg-red">
         <div class="col text-uppercase text-center text-rose mb-2">
             <hr>
-            <h2> Profile</h2>
+            <h2>Profile - {{ user }}</h2>
         </div>
     </div>
     <div class="row">
