--- a/templates/includes/product_review.html
+++ b/templates/includes/product_review.html
@@ -3,21 +3,54 @@
         {% if user.is_authenticated %}
         <div class="row">
             <!--Blank form for authenticated users-->
-            <div class="col"></div>
+            <div class="col">
+                <div class="col-12 col-lg-10 text-uppercase text-center text-darkred mt-4 ml-5">
+                    <p class="text-muted text-red font-weight-bold">*Fill out the form below to submit a product review</p>
+                    <hr class="w-50">
+                    <form action="{% url 'reviews' %}" method="POST" id="review-form">
+                        {% csrf_token %}
+                        <fieldset class="rounded px-3 mb-5">
+                            <legend class="fieldset-label text-black text-center px-2 w-auto font-weight-bold"><u>Review Title</u></legend>
+                            <!--{{ review_form.review_title | as_crispy_field -->
+                        </fieldset>
+                        <hr class="w-50">
+                        <fieldset class="rounded px-3 mb-5">
+                            <legend class="fieldset-label px-2 w-auto text-black text-center font-weight-bold"><u>Product Review and Rating</u></legend>
+                            <!--{{ review_form.review_description | as_crispy_field -->
+                            <!--{{ review_form.review_rating | as_crispy_field -->
+                            <div class="float-center">
+                                {% if user.is_authenticated %}
+                                <label for="id-save-review">
+                                    <a class="btn btn-darkred rounded border-black font-weight-bold" href="{% url 'account_signup' %}">Save Review <i class="fas fa-file-alt"></i></a> 
+                                </label>
+                                {% else %}
+                                <label for="id-save-review">
+                                    <a href="{% url 'account_signup' %}" class="text-info">Create Account</a> or
+                                    <a href="{% url 'account_login' %}" class="text-info">Sign In</a> to write a review.
+                                </label>
+                                {% endif %}
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
         </div>
         {% endif %}
-        <div class="row">
+        <div class="row offset-3">
             <!--Display reviews about chosen product-->
-            <div class="col">
-                <div class="card-top text-darkred">
-                    <h3>{{ review.review_title }}</h3>
-                    <p class="text-muted text-darkred"> by: {{ review.user }} on {{ review.date }}</p>
+            <div class="col-6 ml-3 mb-2 font-weight-bold border-black rounded bg-darkred text-rose">
+                <div class="card-top mt-2">
+                    <h3 class="ml-2">Title: {{ review.review_title }}</h3>
                 </div>
-                <div class="card-body text-black">
-                    {{ review.review_description }}
+                <hr class="w-100 bg-rose">
+                <div class="card-body">
+                    <p>Product Review: {{ review.review_description }}</p>
+                    <hr class="w-75 bg-rose ml-0">
+                    <p class="text-red">Product Rating: {{ review.review_rating }}</p>
                 </div>
-                <div class="card-bottom text-darkred">
-                    {{ review.review_rating }}
+                <hr class="w-100 bg-rose">
+                <div class="card-bottom">
+                    <p class="text-muted text-rose ml-2"> by: {{ review.user }} on {{ review.date }}</p>
                 </div>
             </div>
         </div>
