--- a/products/templates/products/includes/quantity_input_script.html
+++ b/products/templates/products/includes/quantity_input_script.html
@@ -41,4 +41,13 @@
         var itemId = $(this).data('item_id');
         handleEnableDisable(itemId);
     });
+
+        //Item quantity ranged between 0-5
+        function handleEnableDisable1(itemId) {
+        var currentValue = parseInt($(`#id_qty_${itemId}`).val());
+        var minusDisabled = currentValue < 1;
+        var plusDisabled = currentValue > 4;
+        $(`#decrement-qty_${itemId}`).prop('disabled', minusDisabled);
+        $(`#increment-qty_${itemId}`).prop('disabled', plusDisabled);
+    }
 </script>
