--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -41,7 +41,7 @@
                                 {% if item.product.image %}
                                     <img class="w-100 img-thumbnail" src="{{ item.product.image.url }}" alt="{{ product.name }}">
                                 {% else %}
-                                    <img class="w-100 img-thumbnail" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                                    <img class="w-100 img-thumbnail" src="{{ MEDIA_URL }}noimag.png" alt="{{ product.name }}">
                                 {% endif %}
                             </a>
                         </div>
