--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -13,7 +13,7 @@
 <div class="bg-rose">
     <div class="container">
         <div class="row text-darkred">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 ">
                 <hr>
                 <h2 class="logo-font mb-4">Product Management</h2>
                 <h5 class="text-muted text-red">Add a Product</h5>
@@ -22,7 +22,7 @@
         </div>
 
         <div class="row text-darkred">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 bg-darkred text-rose">
                 <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form | crispy }}
