--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,7 @@
             <div class="dropdown-menu border-0 bg-rose" aria-labelledby="user-options">
               {%if request.user.is_authenticated %}
               {% if request.user.is_superuser %}
-              <a href="#" class="dropdown-item text-red font-weight-bold">Manage Products</a>
+              <a href="{% url 'add_product' %}" class="dropdown-item text-red font-weight-bold">Manage Products</a>
               {% endif %}
               <a href="{% url 'profile' %}" class="dropdown-item text-red font-weight-bold">My Profile</a>
               <a href="{% url 'account_logout' %}" class="dropdown-item text-red font-weight-bold">Sign Out</a>
