--- a/templates/includes/product_review.html
+++ b/templates/includes/product_review.html
@@ -7,7 +7,7 @@
                 <div class="col-12 col-lg-6 text-uppercase text-center text-darkred mt-5 ml-5">
                     <p class="text-muted text-red font-weight-bold">*Fill out the form below to submit a product review</p>
                     <hr class="w-50">
-                    <form action="{% url 'reviews' %}" method="POST" id="review-form" >
+                    <form action="#" method="POST" id="review-form" >
                         {% csrf_token %}
                         <div>
                             <fieldset class="rounded px-3 mb-2">
