--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -20,7 +20,11 @@
                 {% for item in bag_items %}
                     <div class="row">
                         <div class="col-3 my-1">
-                            <img src="{{ item.product.image.url }}" alt="{{ item.product.name }}" class="w-100">
+                            {% if product.image %}
+                            <img src="{{ item.product.image.url }}" alt="{{ item.product.name }}" class="w-100 img-thumbnail">
+                            {% else %}
+                            <img src="{{ MEDIA_URL }}noimag.png" alt="{{ item.product.name }}" class="w-100 img-thumbnail">
+                            {% endif %}
                         </div>
                         <div class="col-9">
                             <p class="my-0"><strong>{{ item.product.name }}</strong></p>
