--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -83,6 +83,12 @@
                                             {% else %}
                                                 <small class="text-muted text-red">No Rating</small>
                                             {% endif  %}
+                                            {% if request.user.is_superuser %}
+                                                <small class="ml-3 font-weight-bold bg-white text-darkred">
+                                                    <a class="text-black ml-2 mr-2" href="{% url 'edit_product' product.id %}">Edit</a> | 
+                                                    <a class="text-red ml-2 mr-2" href="{% url 'delete_product' product.id %}">Delete</a>
+                                                </small>
+                                            {% endif %}
                                         </div>
                                     </div>
                                 </div>
